[tool.poetry]
name = "6053-final-project"
version = "0.1.0"
description = "Final Project for CS-GY 6053 Spring 2024"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.26.4"
cartopy = "^0.22.0"
geopandas = "^0.14.3"
matplotlib = "^3.8.4"
ipykernel = "^6.29.4"
httpx = "^0.27.0"
shapely = "^2.0.3"
pymc = "^5.14.0"
arviz = "^0.18.0"
nbconvert = {extras = ["webpdf"], version = "^7.16.4"}
pyppeteer = "^2.0.0"
ipywidgets = "^8.1.2"
networkx = "^3.3"
pandoc = "^2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
